--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1213,7 +1213,7 @@
     <string name="complete_zone_measurements_ar">يرجى تعبئة / إرسال القياسات لجميع المناطق</string>
 
     <string name="preview_report">PREVIEW REPORT</string>
-    <string name="preview_report_gr">ΠΡΟΕΠΙΣΚΟΠΙΣΗ ΔΕΛΤΙΟΥ</string>
+    <string name="preview_report_gr">ΠΡΟΕΠΙΣΚΟΠΗΣΗ ΔΕΛΤΙΟΥ</string>
 
 
     <string name="select_date_to_check_availability">Please select assignment date to check resources\' availability</string>
