--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -700,7 +700,7 @@
     <string name="remove_url_ar">هل انت متأكد من حذف الرابط ?</string>
 
     <string name="search_customers">Search Customers</string>
-    <string name="search_customers_gr">Αναζήτησή πελατη</string>
+    <string name="search_customers_gr">Αναζήτηση πελατη</string>
     <string name="search_customers_ar">البحث عن العملاء</string>
 
     <string name="name">Name</string>
