--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1262,6 +1262,11 @@
     <string name="no_internet_file_will_be_sent_gr">No Internet connection. Το αρχείο αποθηκέυτηκε προς μελλοντική αποστολή.</string>
     <string name="no_internet_file_will_be_sent_ar">No Internet connection. Attachment is saved and will be automatically sent to server on you next launch of app if Internet is available.</string>
 
+    <string name="file_size_limit">Selected file size must not exceed 30 Mb</string>
+    <string name="file_size_limit_gr">Το μέγεθος του επιλεγμένου αρχείου δεν μπορεί να υπερβαίνει τα 30 Mb</string>
+    <string name="file_size_limit_ar">Selected file size must not exceed 30 Mb</string>
+
+
     <item type="id" name="TAG_ID" />
 
 
