--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1311,7 +1311,7 @@
     <string name="add_following_items_question_ar">Do you want to add the following items? :</string>
 
     <string name="mandatory_payment">The workorder\'s minimum payment is %s</string>
-    <string name="mandatory_payment_gr">Η ελάχιστη χρέωση της ανάθεσης είναι %s</string>
+    <string name="mandatory_payment_gr">Η ελάχιστη είσπραξη της ανάθεσης είναι %s</string>
     <string name="mandatory_payment_ar">The workorder\'s minimum payment is %s</string>
 
     <item type="id" name="TAG_ID" />
