--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1375,6 +1375,11 @@
     <string name="det_custom_fields_gr">Παραμετρικά πεδία Ανάθεσης</string>
     <string name="det_custom_fields_ar">Assignment Custom Fields</string>
 
+    <string name="create_workorder_on_asset">Create a Work Order on this asset?</string>
+    <string name="create_workorder_on_asset_gr">Θέλετε να δημιουργηθεί ανάθεση πάνω στο είδος;</string>
+    <string name="create_workorder_on_asset_ar">Create a Work Order on this asset?</string>
+
+
     <item type="id" name="TAG_ID" />
 
 
